# FIOs-EDOs-mkl

./: CHANGELOG  CMakeLists.txt  INSTALL  README.md  VERSION
CMake/: CompilerFlags_Fortran.cmake  FileList.cmake  SetCompileOptions.cmake
scripts/: fios-edos_cube_generator.sh  fios_cube_generator.sh  max_beta_error.sh
src/: FIOs-EDOs-mkl.f90
src/compute/: EDOs.f90  FIOs.f90  basis2atom_map.f90  c2ci.f90  d2dmo.f90  dip2dipmo.f90
src/matlib/: diasym.f90  matinv.f90  mtxm_mkl.f90  mtxmxm_mkl.f90  mxm_mkl.f90  mxmt_mkl.f90  mxmxmt_mkl.f90  mxvxmt_mkl.f90
src/modules/: commonmod.f90  conductance.f90  constants.f90  date_and_time.f90  dummy_variables.f90  gen_multpol_mat.f90  getopt.f90  kinds.f90  memory_use.f90  readmod.f90  system.f90  text.f90  writemod.f90
src/read/: read_pol.f90  readfchk.f90  readfchk2.f90  readg09out.f90
src/sort/: indexxabs.f90
